--- a/jenkins-workers.yaml
+++ b/jenkins-workers.yaml
@@ -29,8 +29,8 @@ spec:
         app.k8s.io/version: 1.0.0
     spec:
       containers:
-      - name: curl
-        image: curlimages/curl
+      - name: netshoot
+        image: nicolaka/netshoot
         command: ["/bin/sleep", "3650d"]
         imagePullPolicy: IfNotPresent
       - args:
